--- a/zeek_cluster_install.yml
+++ b/zeek_cluster_install.yml
@@ -7,6 +7,4 @@
         - dir: /zeek
         - dir: /opt/zeek
   roles:
-    - zeek_user_and_directories
-    - install_zeek_dependencies
-    - copy_zeek_source_code
+    - cluster 
