--- a/roles/cluster/tasks/main.yml
+++ b/roles/cluster/tasks/main.yml
@@ -1,69 +1,7 @@
 ---
-- name: install dependencies
-  apt:
-    name:
-      - cmake
-      - make
-      - gcc
-      - g++
-      - flex
-      - bison
-      - libpcap-dev
-      - libssl-dev
-      - python-dev
-      - swig
-      - zlib1g-dev
-      - libmaxminddb-dev
-      - postfix
-      - gdb
-      - python-pip
-    state: present
+- include_tasks: dependencies.yml
+  when: ansible_distribution == "Ubuntu"
+  
+- include_tasks: zeek_user_and_directories.yml
 
-- name: create zeek user and group
-  user:
-    name: zeek
-    shell: /bin/bash
-    home: /home/zeek
-
-- name: create dependent directories
-  file:
-    path: 
-      - "{{ item.zeekpath }}"
-      - "{{ item.logpath }}"
-    owner: zeek
-    group: zeek
-    state: directory
-  with_items: "{{ paths }}"
-
-- name: copy sudoers file for zeek nonroot user
-  copy:
-    src: zeek_sudoer
-    dest: /etc/sudoers.d/
-    owner: root
-    group: root
-    mode: '0644'
-
-- name: extract zeek to /home/zeek
-  unarchive:
-    src: "{{ zeek_ver }}.tar.gz"
-    dest: /home/zeek
-    owner: zeek
-    group: zeek
-  when: "'manager' in group_names"
-
-- name: configure zeek source
-  command: "./configure --with-pcap=/usr/local/lib --with-geoip=/usr/share/GeoIP/ --prefix={{ item.zeekpath }} --logdir={{ item.logpath }}"
-  args:
-    chdir: /home/zeek/{{ zeek_ver }}
-  become_user: zeek
-  with_items: "{{ paths }}"
-  when: "'manager' in group_names"
-
-- name: install zeek. feel free to grab a cup of coffee, we could be here a while.
-  make:
-    chdir: /home/zeek/{{ zeek_ver }}
-    target: install
-    params:
-      NUM_THREADS: 4
-  become_user: zeek
-  when: "'manager' in group_names"
+- include_tasks: extract_and_build_zeek.yml
