--- a/roles/cluster/tasks/extract_and_build_zeek.yml
+++ b/roles/cluster/tasks/extract_and_build_zeek.yml
@@ -1,5 +1,5 @@
 ---
-- name: Check if zeek_ver is installed
+- name: Check if {{ zeek_ver }} is installed
   shell: "grep {{ zeek_ver }} {{ item.zeekpath }}/bin/zeek-config | wc -l"
   ignore_errors: yes
   register: checkversion
@@ -17,27 +17,27 @@
 
 - name: the block is hot. extract, configure, and install zeek
   block:
-    - name: extract zeek to /home/zeek
+    - name: extract zeek to /home/{{ zeek_user }}
       unarchive:
         src: "{{ zeek_ver }}.tar.gz"
-        dest: /home/zeek
-        owner: zeek
-        group: zeek
+        dest: /home/{{ zeek_user }}
+        owner: "{{ zeek_user }}"
+        group: "{{ zeek_user }}"
 
     - name: configure zeek source
       command: "./configure --with-pcap=/usr/local/lib --with-geoip=/usr/share/GeoIP/ --prefix={{ item.zeekpath }} --logdir={{ item.logpath }}"
       args:
-        chdir: /home/zeek/{{ zeek_ver }}
+        chdir: /home/{{ zeek_user }}/{{ zeek_ver }}
       become_user: zeek
       with_items: "{{ paths }}"
  
     - name: install zeek. feel free to grab a cup of coffee, we could be here a while.
       make:
-        chdir: /home/zeek/{{ zeek_ver }}
+        chdir: /home/{{ zeek_user }}/{{ zeek_ver }}
         target: install
         params:
-          NUM_THREADS: 4
-      become_user: zeek
+          NUM_THREADS: "{{ cpu_cores }}"
+      become_user: "{{ zeek_user }}"
   when: 
     - "'manager' in group_names"
     - checkversion_var == "0"
