--- a/roles/cluster/tasks/dependencies.yml
+++ b/roles/cluster/tasks/dependencies.yml
@@ -10,11 +10,14 @@
       - bison
       - libpcap-dev
       - libssl-dev
-      - python-dev
       - swig
       - zlib1g-dev
       - libmaxminddb-dev
       - postfix
       - gdb
-      - python-pip
+      - python3-pip
+      - python3
+      - python3-dev
+      - python3-git
+      - python3-semantic-version  
     state: latest
