--- a/roles/cluster/tasks/clone_and_build_zeek.yml
+++ b/roles/cluster/tasks/clone_and_build_zeek.yml
@@ -1,6 +1,6 @@
 ---
 - name: Check if zeek_ver is installed
-  shell: "grep {{ zeek_ver }} {{ zeekdir }}/zeek/bin/zeek-config | wc -l"
+  shell: "grep {{ zeek_ver }} {{ zeekdir }}/bin/zeek-config | wc -l"
   #  ignore_errors: yes
   register: checkversion
   become_user: zeek
@@ -45,7 +45,7 @@
     - use_proxy
 
 - name: configure zeek source
-  command: "./configure --with-pcap=/usr/local/lib --with-geoip=/usr/share/GeoIP/ --prefix={{ zeekdir }}/zeek --logdir={{ logdir }}/zeek"
+  command: "./configure --with-pcap=/usr/local/lib --with-geoip=/usr/share/GeoIP/ --prefix={{ zeekdir }} --logdir={{ logdir }} --spooldir={{ spooldir }}"
   args:
     chdir: /home/zeek/{{ zeek_ver }}
   become_user: zeek
