--- a/roles/cluster/tasks/clone_and_build_zeek.yml
+++ b/roles/cluster/tasks/clone_and_build_zeek.yml
@@ -4,14 +4,14 @@
   #  ignore_errors: yes
   register: checkversion
   become_user: zeek
-
-- name: debug checkversion
-  debug:
-    var: "{{ checkversion }}"
+  when:
+    - "'manager' in group_names"
 
 - name: create checkversion fact
   set_fact:
     checkversion_var: "{{ checkversion.stdout }}"
+  when:
+    - "'manager' in group_names"
 
 - name: reload sshd
   command: systemctl reload sshd
@@ -45,7 +45,7 @@
     - use_proxy
 
 - name: configure zeek source
-  command: "./configure --with-pcap=/usr/local/lib --with-geoip=/usr/share/GeoIP/ --prefix={{ zeekdir }} --logdir={{ logdir }} --spooldir={{ spooldir }}"
+  command: "./configure --with-pcap=/usr/local/lib --with-geoip={{ libmaxminddir }} --prefix={{ zeekdir }} --logdir={{ logdir }} --spooldir={{ spooldir }}"
   args:
     chdir: /home/zeek/{{ zeek_ver }}
   become_user: zeek
