--- a/roles/cluster/tasks/dependencies.yml
+++ b/roles/cluster/tasks/dependencies.yml
@@ -20,4 +20,6 @@
       - python3-dev
       - python3-git
       - python3-semantic-version
+      - google-perftools
+      - libgoogle-perftools-dev
     state: latest
